# my_blog

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  blog_data.json  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: bb19d2ee9ba4_новая_миграция.py
app/core/: config.py  security.py
app/database/: database.py  models.py
app/db/: database.py
app/routes/: auth.py  favorites.py  likes.py  posts.py  templates.py  users.py
app/schemas/: likes.py  posts.py  users.py
database/: er_diagram.md  schema.sql
templates/: create.html  edit.html  index.html  login.html  post.html  profile.html  register.html
tests/: conftest.py  test_basic.py  test_e2e_scenarios.py  test_integration_auth.py  test_integration_posts.py  test_with_coverage.py  tests_e2e.py
